# Sentinel

./: .gitattributes  Cargo.toml  Dockerfile  README.md  cliff.toml  demo.toml  docker-compose.yml
src/: cli.rs  config.rs  lib.rs  main 2.rs  main.rs
src/cache/: mod.rs  semantic.rs
src/cost/: mod.rs  optimization.rs  pricing.rs
src/provider/: anthropic.rs  cohere.rs  gemini.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  perplexity.rs  together.rs
src/proxy/: handlers.rs  middleware.rs  mod.rs  pii.rs
src/router/: mod.rs  smart.rs
src/storage/: db.rs  schema.rs
src/ui/: mod.rs
templates/: index.html  logs.html  optimizations.html  savings.html  stats.html
