[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
axum = { version = "0.7.9", features = ["macros"] }
hyper = { version = "1.5", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json", "stream"] }
libsql = { version = "0.6.0" }
dashmap = "6.1"
config = "0.15"
clap = { version = "4.5", features = ["derive"] }
fancy-regex = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama = { version = "0.12" }
askama_axum = "0.4"
directories = "5.0"
uuid = { version = "1.12", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
futures-util = "0.3"
async-trait = "0.1"
md5 = "0.7"
rand = "0.8"
candle-core = "0.8.2"
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
hf-hub = "0.4.1"
tokenizers = "0.21"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3.16"
criterion = { version = "0.5", features = ["html_reports"] }
futures = "0.3"

[[example]]
name = "benchmark_runner"
path = "examples/benchmark_runner.rs"
